# auto-gov

./: .gitattributes  .gitignore  .travis.yml  README.md  pyproject.toml  setup.py  setup_repo.sh
aavegov/: analyzer.py  compoundprice.py  fetcher.py  graphqueries.py  optimization_plots.py  pricegetter.py  regdata.py  regression.py  riskplot.py  utils.py  wiener.py
assets/: arc.drawio  time_cost_300_no_target.txt  time_cost_300_target.txt  time_cost_450_no_target.txt  time_cost_450_target.txt  time_cost_600_no_target.txt  time_cost_600_target.txt
data/: agents.pkl  interest-rate-params.json  link.json  pickle_file_suffix.txt  prices_cryptocompare.json  results-2023-02-13-12-26-44.pkl  risk_relation_corr.csv  risk_relation_corr.xlsx  risk_relation_pval.xlsx  time_cost_300_0.5.txt  time_cost_300_1.txt  time_cost_450_0.5.txt  time_cost_450_1.txt  time_cost_600_0.5.txt  time_cost_600_1.txt  time_cost_750_0.5.txt  time_cost_750_1.txt  usdc.json
market-modeling/: market.py
market_env/: caching.py  constants.py  env.py  interest_rate.py  strategies.py  utils.py
playground/: live_plot.py  running.py  simulate.py  strategies.py  trial_plot.py
plf_env/: actions.py  agent.py  caching.py  cli.py  computations.py  constants.py  core.py  data_fetcher.py  env.py  plot.py  settings.py  simulation.py  simulation_manager.py  strategist.py
presentation/: presentation-fonts.css  presentation.css  presentation.scss  slides.html
rl/: config.py  data_structure.py  dqn_gov.py  main_gov.py  main_gov_test.py  main_sample.py  market_env.py  plotting.py  rl-env.py  rl_agent.py  rl_env.py  test.py  test_agent.py  test_env.py  test_market.py  training.py  utils.py
run_results/: plot_only.py  plotting.py  running.py
scripts/: config.py  desctbl.py  fetch_interest_slopes.py  fetch_price.py  fetch_prices.py  multi_run.py  plotting.py  running.py  test_action_encoding.py  training.py
tests/: conftest.py  test_actions.py  test_env.py  test_simulation_manager.py
(+67 files in other folders)
